--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,7 +12,76 @@ $white: hsl(0, 0%, 100%);
 	padding: 0;
 }
 
-body{
-    font-size: 15px;
-    
+body {
+	font-size: 15px;
+    position: relative;
+    font-family: "League Spartan", sans-serif;
+}
+.wrapper{
+    width: 80%;
+    max-width: 1200px;
+}
+header{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    .header-pattern {
+        z-index: -1;
+        background-image: url(../images/bg-pattern-top-mobile.svg);
+        height: 240px;
+        width: 100%;
+        background-size: cover;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+    .header-title{
+        margin-top: 80px;
+        margin-bottom: .5em;
+        text-align: center;
+        font-size: 2.5rem;
+        font-weight: bold;
+        color:$veryDarkMagenta;
+        line-height: 35px;
+    }
+    .header-description{
+        line-height: 20px;
+        text-align: center;
+        font-size: 1.1rem;
+        color:$darkGrayishMagenta;
+    }
+}
+.rates{
+    display: flex;
+    justify-content: center;
+    .rates-box{
+        margin-top: 2em;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .rate{
+            margin-bottom: 1em;
+            width: 100%;
+            padding: 1em 2em;
+            border-radius: 10px;
+            background-color: $lightGrayishMagenta;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            .star-box{
+                img{
+                    margin-right: .2em;
+                }
+                margin-bottom: .5em;
+            }
+            .info{
+                font-weight: bold;
+                color:$veryDarkMagenta;
+            }
+
+        }
+    }
 }
