--- a/css/main.css
+++ b/css/main.css
@@ -79,4 +79,152 @@ header .header-description {
 .rates .rates-box .rate .info {
   font-weight: bold;
   color: hsl(300, 43%, 22%);
+}
+
+.founders {
+  display: flex;
+  justify-content: center;
+}
+.founders .founders-box {
+  margin-top: 2em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.founders .founders-box .founder-card {
+  background-color: hsl(300, 43%, 22%);
+  margin-bottom: 1.5em;
+  padding: 2em;
+  color: hsl(0, 0%, 100%);
+  border-radius: 10px;
+}
+.founders .founders-box .founder-card .founder-card-top {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1.5em;
+}
+.founders .founders-box .founder-card .founder-card-top img {
+  border-radius: 50%;
+  margin-right: 1em;
+  width: 50px;
+}
+.founders .founders-box .founder-card .info .name {
+  margin-bottom: 0.2em;
+}
+.founders .founders-box .founder-card .info .desc {
+  color: hsl(333, 80%, 67%);
+}
+.founders .founders-box .founder-card .founder-card-quote {
+  line-height: 20px;
+}
+
+.footer {
+  position: relative;
+  text-align: center;
+}
+.footer a {
+  text-decoration: none;
+  color: hsl(300, 43%, 22%);
+  font-weight: bold;
+}
+.footer .footer-pattern {
+  z-index: -1;
+  background-image: url(../images/bg-pattern-bottom-mobile.svg);
+  height: 500px;
+  width: 100%;
+  background-size: cover;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+@media (min-width: 1200px) {
+  header .header-pattern {
+    background-image: url(../images/bg-pattern-top-desktop.svg);
+    height: 590px;
+    width: 50%;
+  }
+  header .header-title {
+    width: 40%;
+    margin-top: 3em;
+    font-size: 3.5rem;
+    line-height: 45px;
+  }
+  header .header-description {
+    width: 40%;
+    font-size: 1.2rem;
+    line-height: 25px;
+    text-align: left;
+  }
+  .rates {
+    position: absolute;
+    top: 15%;
+    right: 10%;
+  }
+  .rates .rates-box {
+    width: 600px;
+  }
+  .rates .rates-box .rate {
+    width: 70%;
+    flex-direction: row;
+    align-items: center;
+  }
+  .rates .rates-box .rate .star-box {
+    margin-right: 1.5em;
+    margin-bottom: 0.5em;
+  }
+  .rates .rates-box .rate .star-box img {
+    margin-right: 0.2em;
+  }
+  .rates .rates-box .rate .info {
+    font-weight: bold;
+    color: hsl(300, 43%, 22%);
+  }
+  .rates .rates-box .reviews {
+    margin-left: -2em;
+  }
+  .rates .rates-box .guru {
+    margin-left: 2em;
+  }
+  .rates .rates-box .best-tech {
+    margin-left: 6em;
+  }
+  .founders .founders-box {
+    flex-direction: row;
+    align-items: center;
+  }
+  .founders .founders-box .founder-card {
+    background-color: hsl(300, 43%, 22%);
+    margin-right: 1.5em;
+    padding: 2em;
+    color: hsl(0, 0%, 100%);
+    border-radius: 10px;
+    width: 320px;
+    height: 240px;
+  }
+  .founders .founders-box .irene {
+    margin-top: 2em;
+  }
+  .founders .founders-box .anne {
+    margin-top: 4em;
+  }
+  .footer {
+    position: relative;
+    text-align: center;
+  }
+  .footer a {
+    text-decoration: none;
+    color: hsl(300, 43%, 22%);
+    font-weight: bold;
+  }
+  .footer .footer-pattern {
+    z-index: -1;
+    background-image: url(../images/bg-pattern-bottom-mobile.svg);
+    height: 1000px;
+    width: 100%;
+    background-size: cover;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+  }
 }/*# sourceMappingURL=main.css.map */
