--- a/sass/main.scss
+++ b/sass/main.scss
@@ -85,3 +85,163 @@ header{
         }
     }
 }
+.founders{
+    display: flex;
+    justify-content: center;
+    .founders-box{
+        margin-top: 2em;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .founder-card{
+            background-color: $veryDarkMagenta;
+            margin-bottom: 1.5em;
+            padding: 2em;
+            color: $white;
+            border-radius: 10px;
+            .founder-card-top{
+                display: flex;
+                align-items: center;
+                margin-bottom: 1.5em;
+                img{
+                    border-radius: 50%;
+                    margin-right: 1em;
+                    width: 50px;
+                }
+            }
+            .info{
+                .name{
+                    margin-bottom: .2em;
+                }
+                .desc{
+                    color: $softPink;
+                }
+            }
+            .founder-card-quote{
+                line-height: 20px;
+            }
+        }
+    }
+}
+.footer{
+    position: relative;
+    text-align: center;
+    a{
+        text-decoration: none;
+        color: $veryDarkMagenta;
+        font-weight: bold;
+    }
+    .footer-pattern{
+        z-index: -1;
+        background-image: url(../images/bg-pattern-bottom-mobile.svg);
+        height: 500px;
+        width: 100%;
+        background-size: cover;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+    }
+}
+
+@media (min-width:1200px) {
+    header{
+        
+        .header-pattern {
+            background-image: url(../images/bg-pattern-top-desktop.svg);
+            height: 590px;
+            width: 50%;
+        }
+        .header-title{
+            width: 40%;
+            margin-top: 3em;
+            font-size: 3.5rem;
+            line-height: 45px;
+
+        }
+        .header-description{
+            width: 40%;
+            font-size: 1.2rem;
+            line-height: 25px;
+            text-align: left;
+        }
+    }
+    .rates{
+        position: absolute;
+        top: 15%;
+        right: 10%;
+        .rates-box{
+            width: 600px;
+            .rate{
+                width: 70%;
+                flex-direction: row;
+                align-items: center;
+                
+                .star-box{
+                    margin-right: 1.5em;
+                    img{
+                        margin-right: .2em;
+                    }
+                    margin-bottom: .5em;
+                }
+                .info{
+                    font-weight: bold;
+                    color:$veryDarkMagenta;
+                }
+            }
+            .reviews{
+                margin-left: -2em;
+            }
+            .guru{
+                margin-left: 2em;
+            }
+            .best-tech{
+                margin-left: 6em;
+            }
+        }
+    }
+    .founders{
+        .founders-box{
+            flex-direction: row;
+            align-items: center;
+            .founder-card{
+                background-color: $veryDarkMagenta;
+                margin-right: 1.5em;
+                padding: 2em;
+                color: $white;
+                border-radius: 10px;
+                width: 320px;
+                height: 240px;
+                
+    }
+            .irene{
+                margin-top: 2em;
+            }
+            .anne{
+                margin-top: 4em;
+            }
+            
+            
+}
+}
+    .footer{
+        position: relative;
+        text-align: center;
+        a{
+            text-decoration: none;
+            color: $veryDarkMagenta;
+            font-weight: bold;
+        }
+        .footer-pattern{
+            z-index: -1;
+            background-image: url(../images/bg-pattern-bottom-mobile.svg);
+            height: 1000px;
+            width: 100%;
+            background-size: cover;
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            
+        }
+    }
+    
+}
